fixing laggy animations on ios

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -99,8 +99,9 @@ h2{
     justify-content: center;
     align-items: top;
     padding-top:30%;
-    top: -300%;
+    top: 0%;
     transition: all 1s;
+    transform: translateY(0%);
 }
 .popup{
     background-color: rgb(182, 237, 160);
